@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Defer creation of the epoll handle until the loop is started to support preforking use cases like Hypnotoad
 
 0.008     2018-03-28 15:10:42 EDT
   - Require Linux::Epoll 0.013 to fix compatibility with tied/global handles and recent versions of Net::DNS::Native
